src/ionic/www/css/style.css
/* General */
ion-content.has-header {
    margin-bottom: 44px; /* Correct scrolling bug with ion-content that has 'has-header' applied */
}

.info-desc {
    text-align: justify;
    text-justify: inter-word;

    padding-left: 20px;
    padding-right: 20px;
}

/* User instructions and feedback */
ion-spinner * {
    width: 25vw !important;
    height: 25vw !important;
    stroke: #444;
    fill: #222;
}

.etiquette {
    width: 50vw;
    margin-left: auto;
    margin-right: auto;

    padding: 15px;
    margin-top: 30px;
    margin-bottom: 30px;

    font-size: 20px;

    border-width: 3px;
    border-style: dashed;
    border-radius: 26px;
}

/* Image slider */
.imgbox {
    max-width: 100vw;
    max-height: 50vh;

    margin-bottom: 15px;
}
.imgbox img {
    max-width: 100vw;
    max-height: 50vh;
}

/* Informations table */
.col {
    border: solid 1px grey;
    border-bottom-style: none;
    border-right-style: none;
}
.col:last-child {
    border-right: solid 1px grey;
}
.row {
    padding: 0px;
}
.row:last-child .col {
    border-bottom: solid 1px grey;
}

